// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BookGrid matches snapshot (dark mode) 1`] = `
<div>
  <div
    data-testid="book-grid"
  >
    <div
      class="MuiBox-root css-1gw3adi"
    >
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Atomic Habits by James Clear on Goodreads"
            class="MuiBox-root css-juqqx6"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-1bqgj03"
            >
              <img
                alt="Cover of Atomic Habits"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover1.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-xluy6d"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1j3p2n-MuiTypography-root"
              >
                Atomic Habits
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-11cl95w-MuiTypography-root"
              >
                James Clear
              </p>
              <div
                class="MuiBox-root css-1vzbo3b"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1whzqkd-MuiTypography-root"
                >
                  Jan 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Deep Work by Cal Newport on Goodreads"
            class="MuiBox-root css-juqqx6"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-1bqgj03"
            >
              <img
                alt="Cover of Deep Work"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover2.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-xluy6d"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1j3p2n-MuiTypography-root"
              >
                Deep Work
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-11cl95w-MuiTypography-root"
              >
                Cal Newport
              </p>
              <div
                class="MuiBox-root css-1vzbo3b"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1yqht2x"
                  >
                    <svg
                      fill="none"
                      stroke="currentColor"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1whzqkd-MuiTypography-root"
                >
                  Feb 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookGrid matches snapshot (empty state) 1`] = `
<div>
  <div>
    <div
      class="MuiBox-root css-1uykfe0"
      data-testid="empty-state"
    >
      <div
        class="MuiBox-root css-1hq119z"
      >
        📚
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 css-o5r26m-MuiTypography-root"
      >
        No books found
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-112gkyv-MuiTypography-root"
      >
        Try adjusting your search or filters to find what you're looking for.
      </p>
    </div>
  </div>
</div>
`;

exports[`BookGrid matches snapshot (light mode) 1`] = `
<div>
  <div
    data-testid="book-grid"
  >
    <div
      class="MuiBox-root css-1gw3adi"
    >
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Atomic Habits by James Clear on Goodreads"
            class="MuiBox-root css-1pslrmu"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-qmvy1j"
            >
              <img
                alt="Cover of Atomic Habits"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover1.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-xluy6d"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-8tt4nq-MuiTypography-root"
              >
                Atomic Habits
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1ls2klx-MuiTypography-root"
              >
                James Clear
              </p>
              <div
                class="MuiBox-root css-1vzbo3b"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1cdvyhq-MuiTypography-root"
                >
                  Jan 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: 100%;"
      >
        <div>
          <div
            aria-label="Deep Work by Cal Newport on Goodreads"
            class="MuiBox-root css-1pslrmu"
            data-testid="book-card"
            role="link"
          >
            <div
              class="MuiBox-root css-qmvy1j"
            >
              <img
                alt="Cover of Deep Work"
                class="css-ekopze"
                loading="lazy"
                src="https://example.com/cover2.jpg"
                style="opacity: 0; transition: opacity 0.4s;"
              />
            </div>
            <div
              class="MuiBox-root css-xluy6d"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-8tt4nq-MuiTypography-root"
              >
                Deep Work
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1ls2klx-MuiTypography-root"
              >
                Cal Newport
              </p>
              <div
                class="MuiBox-root css-1vzbo3b"
              >
                <div
                  class="MuiBox-root css-uklcv"
                >
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1wv9kn0"
                  >
                    <svg
                      fill="currentColor"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiBox-root css-1ygrwtt"
                  >
                    <svg
                      fill="none"
                      stroke="currentColor"
                      stroke-width="1.5"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
                      />
                    </svg>
                  </div>
                </div>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1cdvyhq-MuiTypography-root"
                >
                  Feb 2025
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
